DROTH-2098 Unknown speed limit list upgrade part 2 -Fix space between checkbox and link not appearing correctly on Chrome -Fix count not showing the right number -Put disable on button "Poista turhat kohteet"

--- a/UI/src/less/core/tables.less
+++ b/UI/src/less/core/tables.less
@@ -33,8 +33,8 @@ th {
     }
   }
 
-  .checkboxNoWidth{
-    width: 0px;
+  .checkboxWidth{
+    width: 10px;
   }
 }
 
